finished class walk thru of standard layout for css

--- a/css/layout.css
+++ b/css/layout.css
@@ -61,6 +61,9 @@ display: flex;
 .row.justify-end {
     justify-content: end;
 }
+.row.justify-center {
+    justify-content: center;
+}
 .row.justify-space-between {
     justify-content: space-between;
 }
