--- a/css/bootstrap-intro.css
+++ b/css/bootstrap-intro.css
@@ -1,5 +1,30 @@
-.test-box {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+/*in-class bootstrap exercise*/
+/*.test-box {*/
+/*    width: 100px;*/
+/*    height: 100px;*/
+/*    background-color: red;*/
+/*}*/
+:root {
+    --primary: rgba(255, 163, 160, 0.78)
 }
+
+header {
+    background-color: var(--primary);
+}
+img.d-block {
+    max-width: 50%;
+    aspect-ratio: 2/3
+}
+div.text-center {
+    color: var(--primary);
+}
+button.btn-primary {
+    background-color: var(--primary);
+    border: 1px solid white;
+}
+button.btn-outline-secondary {
+    border: 1px solid var(--primary);
+    color: var(--primary);
+    background-color: white;
+}
+
