completed js functionality, typing into search bar, moving marker, and tabs are all functional. would like to continue styling website.

--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -16,6 +16,6 @@
 .five-day-card {
     border: 5px dotted green;
 }
-li {
+ul.five-day-weather-items li {
     list-style-image: url("../img/lil-plant-bullet-point.png");
 }
