--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -29,6 +29,7 @@ body {
     font-size: 24px;
     background-image: url("../img/monstera.jpg");
     /*background-image: url("../img/burning-lotr.jpg");*/
+    background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
