added search bar to html, added fetch for search results from swapi. userSearch function works when passing argument directly in JS (html search bar not functional).

--- a/css/promises.css
+++ b/css/promises.css
@@ -51,3 +51,6 @@ table#characters .character-name {
     font-weight: 600;
     text-transform: uppercase;
 }
+.search-row {
+    margin-bottom: 5px;
+}
